--- a/hello-world.html
+++ b/hello-world.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Fathym</title>
-  <meta name="description" content="A simple IoT Dashboard.">
+  <meta name="description" content="A simple HTML">
   <meta name="author" content="Fathym">
 </head>
 
 <body>
-<div>Jeremy RULES</div>
+<div>Jackson RULES</div>
 </body>
 </html>
 
